--- a/index.html
+++ b/index.html
@@ -156,14 +156,14 @@
 				<div class="card">
 					<div class="card-body">
 						<a href="https://sabamumtaz123.github.io/weather-App1/"><h5 class="card-title">WEATHER APP</h5>
-							<img class="card-img-top" src="images/Portfolio/Capture.PNG" alt="Card image cap">
+							<img class="card-img-top" src="images/Capture.PNG" alt="Card image cap">
 						</a>
 					</div>
 				</div>
 				<div class="card">
 					<div class="card-body">
 						<a href="https://sabamumtaz123.github.io/News-App/"><h5 class="card-title">NEWS APP</h5>
-							<img class="card-img-top" src="images/Portfolio/Capture1.PNG" alt="Card image cap">
+							<img class="card-img-top" src="images/Capture1.PNG" alt="Card image cap">
 						</a>	
 					</div>
 				</div>
