--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8">
 	<title>PORTFOLIO</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+	 crossorigin="anonymous">
 	<link rel="stylesheet" href="css/base.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/vendor.css">
@@ -13,6 +16,7 @@
 	<script src="js/pace.min.js"></script>
 	<link rel="icon" type="image/png" href="favicon.png">
 </head>
+
 <body id="top">
 	<section id="intro">
 		<div class="intro-overlay"></div>
@@ -28,10 +32,10 @@
 				</div>
 			</div>
 		</div>
-		<ul class="intro-social">	
-			<li class="facebook"><a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a></li>
-			<li class="twitter"><a href="https://twitter.com/"><i class="fa fa-twitter"></i></a></li>
-			<li class="instagram"><a href="https://www.instagram.com/saba_mumtaz123/"><i class="fa fa-instagram"></i></a></li>
+		<ul class="intro-social">
+			<li class="LinkedIn"><a href="https://www.linkedin.com/in/saba-mumtaz-b84245168/"><i class="fa fa-linkedin"></i></a></li>
+			<li class="twitter"><a href="https://twitter.com/SabaMum84000760"><i class="fa fa-twitter"></i></a></li>
+			<li class="github"><a href="https://github.com/sabamumtaz123/porfolio"><i class="fa fa-github"></i></a></li>
 		</ul>
 	</section>
 	<section id="about">
@@ -74,15 +78,15 @@
 						<strong>CSS3</strong>
 					</li>
 					<li>
-						<div class="progress percent70"><span>50%</span></div>
+						<div class="progress percent70"><span>75%</span></div>
 						<strong>JAVASCRIPT</strong>
 					</li>
-				</ul>				
+				</ul>
 			</div>
 		</div>
 		<div class="row button-section">
 			<div class="col-twelve">
-				<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
+				<a href="#contact" title="" class="button stroke smoothscroll">Hire Me</a>
 			</div>
 		</div>
 	</section>
@@ -155,65 +159,64 @@
 			<div class="card-deck">
 				<div class="card">
 					<div class="card-body">
-						<a href="https://sabamumtaz123.github.io/weather-App1/"><h5 class="card-title">WEATHER APP</h5>
+						<a href="https://sabamumtaz123.github.io/weather-App1/">
+							<h5 class="card-title">WEATHER APP</h5>
 							<img class="card-img-top" src="images/Capture.PNG" alt="Card image cap">
 						</a>
 					</div>
 				</div>
 				<div class="card">
 					<div class="card-body">
-						<a href="https://sabamumtaz123.github.io/News-App/"><h5 class="card-title">NEWS APP</h5>
+						<a href="https://sabamumtaz123.github.io/chart.js/">
+							<h5 class="card-title">CHART.sJS</h5>
+							<img class="card-img-top" src="images/Capture2.PNG" alt="Card image cap">
+						</a>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-body">
+						<a href="https://sabamumtaz123.github.io/News-App/">
+							<h5 class="card-title">NEWS APP</h5>
 							<img class="card-img-top" src="images/Capture1.PNG" alt="Card image cap">
-						</a>	
+						</a>
 					</div>
 				</div>
 			</div>
-		</section>
-		<section id="contact">
-			<div class="row section-intro">
-				<div class="col-twelve">
-					<h5>Contact</h5>
-					<h1>I'd Love To Hear From You.</h1>
+	</section>
+	<footer>
+		<div class="row contact-info">
+			<div class="col-four tab-full">
+				<div class="icon">
+					<i class="fas fa-map-marker-alt"></i>
 				</div>
+				<h5>Where to find me</h5>
+				<p>
+					karachi,Pakistan
+				</p>
 			</div>
-			<div class="row contact-form">
-				<div class="col-twelve">
-					<form name="contactForm" id="contactForm" method="post" action="">
-						<fieldset>
-							<div class="form-field">
-								<input name="contactName" type="text" id="contactName" placeholder="Name" value="" minlength="2" required="">
-							</div>
-							<div class="form-field">
-								<input name="contactEmail" type="email" id="contactEmail" placeholder="Email" value="" required="">
-							</div>
-							<div class="form-field">
-								<input name="contactSubject" type="text" id="contactSubject" placeholder="Subject" value="">
-							</div>
-							<div class="form-field">
-								<textarea name="contactMessage" id="contactMessage" placeholder="message" rows="10" cols="50" required=""></textarea>
-							</div>
-							<div class="form-field">
-								<button class="submitform">SEND</button>
-								<div id="submit-loader">
-									<div class="text-loader">Sending...</div>
-									<div class="s-loader">
-										<div class="bounce1"></div>
-										<div class="bounce2"></div>
-										<div class="bounce3"></div>
-									</div>
-								</div>
-							</div>
-						</fieldset>
-					</form>
-					<div id="message-warning">
-					</div>
-					<div id="message-success">
-						<i class="fa fa-check"></i>Your message was sent, thank you!<br>
-					</div>
+			<div class="col-four tab-full">
+				<div class="icon">
+					<i class="fas fa-phone"></i>
 				</div>
+				<h5>Call Me At</h5>
+				<p>
+					Mobile: (+92) 340 2346158
+				</p>
 			</div>
-			<script src="js/jquery-2.1.3.min.js"></script>
-			<script src="js/plugins.js"></script>
-			<script src="js/main.js"></script>
-		</body>
-		</html>
+			<div class="col-four tab-full collapse">
+				<div class="icon">
+					<i class="fas fa-envelope"></i>
+				</div>
+				<h5>Email Me At</h5>
+				<p>
+					mumtazsabaa@gmail.com
+				</p>
+			</div>
+		</div>
+	</footer>
+	<script src="js/jquery-2.1.3.min.js"></script>
+	<script src="js/plugins.js"></script>
+	<script src="js/main.js"></script>
+</body>
+
+</html>
