--- a/index.html
+++ b/index.html
@@ -33,9 +33,21 @@
 			</div>
 		</div>
 		<ul class="intro-social">
-			<li class="LinkedIn"><a href="https://www.linkedin.com/in/saba-mumtaz-b84245168/"><i class="fa fa-linkedin"></i></a></li>
-			<li class="twitter"><a href="https://twitter.com/SabaMum84000760"><i class="fa fa-twitter"></i></a></li>
-			<li class="github"><a href="https://github.com/sabamumtaz123/porfolio"><i class="fa fa-github"></i></a></li>
+			<li class="LinkedIn">
+				<a href="https://www.linkedin.com/in/saba-mumtaz-b84245168/">
+					<i class="fa fa-linkedin"></i>
+				</a>
+			</li>
+			<li class="twitter">
+				<a href="https://twitter.com/SabaMum84000760">
+					<i class="fa fa-twitter"></i>
+				</a>
+			</li>
+			<li class="github">
+				<a href="https://github.com/sabamumtaz123/porfolio">
+					<i class="fa fa-github"></i>
+				</a>
+			</li>
 		</ul>
 	</section>
 	<section id="about">
@@ -70,24 +82,28 @@
 				<h3>Skills</h3>
 				<ul class="skill-bars">
 					<li>
-						<div class="progress percent90"><span>90%</span></div>
+						<div class="progress percent90">
+							<span>90%</span>
+						</div>
 						<strong>HTML5</strong>
 					</li>
 					<li>
-						<div class="progress percent85"><span>85%</span></div>
+						<div class="progress percent85">
+							<span>85%</span>
+						</div>
 						<strong>CSS3</strong>
 					</li>
 					<li>
-						<div class="progress percent70"><span>75%</span></div>
+						<div class="progress percent70">
+							<span>75%</span>
+						</div>
 						<strong>JAVASCRIPT</strong>
 					</li>
 				</ul>
 			</div>
 		</div>
-		<div class="row button-section">
-			<div class="col-twelve">
-				<a href="#contact" title="" class="button stroke smoothscroll">Hire Me</a>
-			</div>
+		<div class="pro">
+			<a class="button stroke smoothscroll" href="#portfolio" title="">My Projects</a>
 		</div>
 	</section>
 	<section id="resume" class="grey-section">
@@ -168,7 +184,7 @@
 				<div class="card">
 					<div class="card-body">
 						<a href="https://sabamumtaz123.github.io/chart.js/">
-							<h5 class="card-title">CHART.sJS</h5>
+							<h5 class="card-title">CHART.JS</h5>
 							<img class="card-img-top" src="images/Capture2.PNG" alt="Card image cap">
 						</a>
 					</div>
@@ -178,6 +194,22 @@
 						<a href="https://sabamumtaz123.github.io/News-App/">
 							<h5 class="card-title">NEWS APP</h5>
 							<img class="card-img-top" src="images/Capture1.PNG" alt="Card image cap">
+						</a>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-body">
+						<a href="https://sabamumtaz123.github.io/whatsaap/">
+							<h5 class="card-title">WHATSAPP</h5>
+							<img class="card-img-top" src="images/Capture3.PNG" alt="Card image cap">
+						</a>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-body">
+						<a href="https://sabamumtaz123.github.io/Quotes-app/">
+							<h5 class="card-title">QUOTES APP</h5>
+							<img class="card-img-top" src="images/Capture4.PNG" alt="Card image cap">
 						</a>
 					</div>
 				</div>
